--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Hello i'm
 <body>
 
 <div class='mainDiv'>
-    <div class="center">We're almost there...</div>
+    <div class="center">We're almost there...Dev style!</div>
 </div>
 
 
