--- a/index.html
+++ b/index.html
@@ -14,24 +14,11 @@ Hello i'm
   <title>Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-.mainDiv {
-    width: 100%;
-    height: auto;
-    bottom: 0px;
-    top: 0px;
-    left: 0;
-    position: absolute;
-}
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -100px;
-    text-align: center;
-    font-size: 2.0em;
-}
 
+  <style>
+    body {font-size: 1.0em; font-family: sans-serif;}
+    .mainDiv {width: 100%; height: auto; bottom: 0px; top: 0px; left: 0;position: absolute;}
+    .center {border-radius: 1em; padding: 1em; position: absolute; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%) }
   </style>
 
 </head>
@@ -39,8 +26,11 @@ Hello i'm
 
 <body>
 
-<div class='mainDiv'>
-    <div class="center">We're almost there...Dev style!</div>
+<div class="mainDiv">
+    <div class="center">
+      <h1>Philippe Boivin</h1>
+      <p>Full website is coming soon! <br>Meanwhile you can reach me on <a href="https://twitter.com/philboiv1n/">Twitter</a> or <a href="https://www.instagram.com/philboiv1n/">Instagram</a>.</p>
+  </div>
 </div>
 
 
