--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Hello i'm Phil Boivin!
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
           
-  <!-- nanogallery2 : https://nanogallery2.nanostudio.org/builder.html -->
+  <!-- nanogallery2 : https://nanogallery2.nanostudio.org/ -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/jquery.nanogallery2.min.js" type="text/javascript"></script>
   
@@ -35,10 +35,10 @@ Hello i'm Phil Boivin!
         <div id="logo" class="logo-wave">Phil Boivin</div>
     
         <nav>
-          <ul>
+        <!--  <ul>
             <li><a href="#">À propos</a></li>
             <li><a href="#">Photographie</a></li>
-          </ul>
+          </ul>-->
         </nav>
   
   </header>
