--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
- <p>
-    Fait à Montréal par <span class="serif">Philippe Boivin</span>. 
+  <p>
+    &copy Philippe Boivin
     <br>
 
     <div class="social-icons">
