--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
-<div id="logo" class="logo-wave">Phil Boivin</div>
+<div id="logo" class="logo-wave"><a href="index.html">Phil Boivin</a></div>
     
 <nav>
- <!-- <ul>
-    <li><a href="#">À propos</a></li>
+  <ul>
+    <li><a href="contact.html">Contact</a></li>
     <li><a href="#">Photographie</a></li>
-  </ul> -->
+  </ul>
 </nav>
