--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,7 @@ Hello i'm Phil Boivin!
       </form>
     </p>
     
-   <div id="messages" class="error"></div>
-v.0.0.2
+   <div id="messages" class="error">v.0.0.3</div>
    </section>
 
     
@@ -117,33 +116,29 @@ v.0.0.2
                 return;
             }
 
-       var name = $("#name-input").val();
-       var email = $("#email-input").val();
-       var message = $("#message-input").val();
-
+ 
        var data = {
-          name : name,
-          email : email,
-          message : message
+          name: $("#name-input").val(),
+          email: $("#email-input").val(),
+          message : $("#message-input").val()
         };
 
        $.ajax({
-         type: "POST",
-         url : "https://039fqid0i9.execute-api.us-east-2.amazonaws.com/Prod",
-         dataType: "json",
-         crossDomain: "true",
-         contentType: "application/json; charset=utf-8",
-      //   data: JSON.stringify(data),
-         data: data,
-
-         success: function () {
+         type: 'POST',
+         url : 'https://039fqid0i9.execute-api.us-east-2.amazonaws.com/Prod',
+         dataType: 'json',
+         crossDomain: 'true',
+         contentType: 'application/json',
+         data: JSON.stringify(data),
+ 
+         success: function (data) {
             // clear form and show a success message 
             $("#messages").attr('class', 'success');
             $("#messages").html("Message sent! Thank you");
             document.getElementById("contact-form").reset();
             location.reload();
          },
-         error: function () {
+         error: function (data) {
             // show an error message
             $("#messages").html("Sorry, there is a technical problem and we can't send your message. Please try again later.");
          }});
