--- a/contact.html
+++ b/contact.html
@@ -39,19 +39,13 @@ Hello i'm Phil Boivin!
 
     <p> 
       <form id="contact-form" method="post">
-      Name
-      <input type="text" id="name-input" placeholder="Enter your name here" class="form-control"><br>
-     <!--  <h4>Phone:</h4>
-      <input type="phone" style="height:35px;" id="phone-input" placeholder="Enter phone number" class="form-control" style="width:100%;"/><br/> -->
-      Email 
-      <input type="email" id="email-input" placeholder="Enter your email here" class="form-control"><br>
-      
-      Message<br>
-      <textarea id="message-input" rows="3" placeholder="Enter your message, question or comment here!" class="form-control"></textarea><br/>
+      <input type="text" id="name-input" placeholder="Your name" class="form-control" maxlength="64"><br>
+      <input type="email" id="email-input" placeholder="Your email address" class="form-control" maxlength="320"><br>
+      <textarea id="message-input" rows="6" placeholder="Enter your message, question or comment here!" class="form-control" maxlength="1024"></textarea>
 
       <!-- <div class="g-recaptcha" data-sitekey="6Lc7cVMUAAAAAM1yxf64wrmO8gvi8A1oQ_ead1ys" class="form-control" style="width:100%;"></div> -->
-      
-      <button type="button" onClick="submitToAPI(event)" class="btn btn-lg" >Submit</button>
+      <br>
+      <button type="button" onClick="submitToAPI(event)" class="form-submit">Submit</button>
 
       </form>
     </p>
@@ -90,7 +84,8 @@ Hello i'm Phil Boivin!
             var nameRegex = /[A-Za-z]{1}[A-Za-z]/;
 
             if (!nameRegex.test($("#name-input").val())) {
-              $("#messages").html("Name should be at least 2 characters");
+              $("#messages").html("<span class='redCircle'>x</span>&nbsp;&nbsp;");
+              $("#messages").append("Name should be at least 2 characters");
               return;
             }
 
@@ -112,7 +107,8 @@ Hello i'm Phil Boivin!
             var emailRegex = /^((([!#$%&'*+\-/=?^_`{|}~\w])|([!#$%&'*+\-/=?^_`{|}~\w][!#$%&'*+\-/=?^_`{|}~\.\w]{0,}[!#$%&'*+\-/=?^_`{|}~\w]))[@]\w+([-.]\w+)*\.\w+([-.]\w+)*)$/;
 
             if (!emailRegex.test($("#email-input").val())) {
-                $("#messages").html("Please enter valid email address");
+                $("#messages").html("<span class='redCircle'>x</span>&nbsp;&nbsp;");
+                $("#messages").append("Please enter valid email address");
                 return;
             }
 
@@ -138,8 +134,9 @@ Hello i'm Phil Boivin!
             location.reload();
          },
          error: function () {
-            // show an error message
-            $("#messages").html("Sorry, there is a technical problem and we can't send your message. Please try again later.");
+            // show an error messages
+            $("#messages").html("<span class='redCircle'>x</span>&nbsp;&nbsp;");
+            $("#messages").append("Sorry, there is a technical problem and we can't send your message. Please try again later.");
          }});
      }
 
