--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
     <section id="content">
 
     <h1>Contact me</h1>
-    <p>Feel free to send me a few lines!</p>
+    <p>Ask me anything! I might reply!</p>
 
     
       <form id="contact-form" method="post">
@@ -47,7 +47,13 @@ Hello i'm Phil Boivin!
       <input type="email" id="email-input" placeholder="Your email address" class="form-control" maxlength="320" required><br>
       
       <label for="message-input">Message</label><br>
-      <textarea id="message-input" rows="6" placeholder="Enter your message, question or comment here!" class="form-control" maxlength="1024" required></textarea>
+      <textarea id="message-input" rows="5" placeholder="Enter your message, question or comment here!" class="form-control" maxlength="1024" required></textarea>
+
+      <label class="form-control-bee" for="name"></label>
+      <input class="form-control-bee" autocomplete="off" type="text" id="name" name="name" placeholder="Your name here">
+      <label class="form-control-bee" for="email"></label>
+      <input class="form-control-bee" autocomplete="off" type="email" id="email" name="email" placeholder="Your e-mail here">
+
       <br>
       <button type="button" onClick="submitToAPI(event)" class="form-submit">Submit</button>
       </form>
@@ -84,6 +90,10 @@ Hello i'm Phil Boivin!
             var x = "<span class='redCircle'>x</span>&nbsp;&nbsp;";
 
             var nameRegex = /[A-Za-z]{1}[A-Za-z]/;
+
+            if ($("#email").val() || $("#name").val()) {
+              return;
+            }
 
             if (!nameRegex.test($("#name-input").val())) {
               $("#messages").html(x+"Name should be at least 2 characters");
