Pages added + CSS updates
New portfolio and about pages. Updated CSS.

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ Hello i'm Phil Boivin!
 <head>
 
   <meta charset="utf-8">
-  <title>Contact Phil Boivin</title>
+  <title>Contact | Phil Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
 
