--- a/header.html
+++ b/header.html
@@ -2,7 +2,8 @@
     
 <nav>
   <ul>
+    <li><a href="portfolio.html">Portfolio</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="#">Photographie</a></li>
   </ul>
 </nav>
