Translated to French + About
Update to all the pages to translate in French + new About page.

--- a/apropos.html
+++ b/apropos.html
@@ -33,8 +33,17 @@ Hello i'm Phil Boivin!
     
     <section id="content">
 
-    <h1>About me</h1>
-    <p>Hello, I'm Phil.</p>
+    <h1>À propos</h1>
+    <p>
+    Photographe et vidéaste pratiquant à Montréal. J'explore l’imagerie numérique depuis le début des années 2000.
+    </p>
+    <p>
+    Je préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. Je suis constamment à la recherche de nouveaux projets.
+    </p>
+    <p>
+    Je suis titulaire d’un diplôme en photographie de l’Université Concordia et détient le Certificat de pilote – Opérations avancées pour drones de Transport Canada.
+    </p>
+    </p>
 
     
    </section>
