--- a/portfolio.html
+++ b/portfolio.html
@@ -69,25 +69,24 @@ Hello i'm Phil Boivin!
                 topRight:  'shareButton, zoomButton, fullscreenButton, closeButton'
               },
               
-              itemsBaseURL: 'https://nanogallery2.nanostudio.org/samples/',
+              itemsBaseURL: 'https://picsum.photos/',
               
               // ### gallery content ### 
               items: [
-                  { src: 'berlin1.jpg', srct: 'berlin1_t.jpg', title: 'Berlin 1' },
-                  { src: 'berlin2.jpg', srct: 'berlin2_t.jpg', title: 'Berlin 2' },
-                  { src: 'berlin3.jpg', srct: 'berlin3_t.jpg', title: 'Berlin 3' },
-                  { src: 'berlin1.jpg', srct: 'berlin1_t.jpg', title: 'Berlin 1' },
-                  { src: 'berlin2.jpg', srct: 'berlin2_t.jpg', title: 'Berlin 2' },
-                  { src: 'berlin3.jpg', srct: 'berlin3_t.jpg', title: 'Berlin 3' },
-                  { src: 'berlin1.jpg', srct: 'berlin1_t.jpg', title: 'Berlin 1' },
-                  { src: 'berlin2.jpg', srct: 'berlin2_t.jpg', title: 'Berlin 2' },
-                  { src: 'berlin1.jpg', srct: 'berlin1_t.jpg', title: 'Berlin 1' },
-                  { src: 'berlin2.jpg', srct: 'berlin2_t.jpg', title: 'Berlin 2' },
-                  { src: 'berlin3.jpg', srct: 'berlin3_t.jpg', title: 'Berlin 3' }
+                  { src: 'id/1/1200/800', srct: 'id/1/300/200', title: 'Temporary picture 1' },
+                  { src: 'id/20/1200/800', srct: 'id/20/300/200', title: 'Temporary picture 2' },
+                  { src: 'id/30/1200/800', srct: 'id/30/300/200', title: 'Temporary picture 3' },
+                  { src: 'id/40/800/1200', srct: 'id/40/200/300', title: 'Temporary picture 4' },
+                  { src: 'id/50/1200/800', srct: 'id/50/300/200', title: 'Temporary picture 5' },
+                  { src: 'id/60/1200/800', srct: 'id/60/300/200', title: 'Temporary picture 6' },
+                  { src: 'id/70/1200/800', srct: 'id/70/300/200', title: 'Temporary picture 7' },
+                  { src: 'id/80/800/1200', srct: 'id/80/200/300', title: 'Temporary picture 8' },
                 ]
             });
         });
     </script>
+
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut leo vel ex accumsan rhoncus. Proin euismod viverra eros a posuere. Nam non purus tellus. Integer ac erat condimentum, pulvinar quam sit amet, scelerisque tellus. Nulla nec est diam. Cras vitae est semper justo iaculis molestie. Proin et lacus sit amet neque posuere scelerisque. Nullam commodo urna ut orci volutpat tincidunt. Mauris eget libero ut risus scelerisque volutpat. Aliquam in rutrum lacus.</p>
 
    </section>
 
