--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <nav>
   <ul>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="apropos.html">À propos</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
