--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,14 @@ Hello i'm Phil Boivin!
 
     <section id="content">
 
+
+    <div class="content-block">  
     <h1>Portfolio</h1>
 
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut leo vel ex accumsan rhoncus. Proin euismod viverra eros a posuere. Nam non purus tellus. Integer ac erat condimentum, pulvinar quam sit amet, scelerisque tellus. Nulla nec est diam. Cras vitae est semper justo iaculis molestie. Proin et lacus sit amet neque posuere scelerisque. Nullam commodo urna ut orci volutpat tincidunt. Mauris eget libero ut risus scelerisque volutpat. Aliquam in rutrum lacus.</p>
-    
+    </div>
 
-    <div id="gallery01" class="gallery">Photo Gallery</div>
+    <div id="gallery01">Photo Gallery</div>
   
     <script>
        jQuery(document).ready(function () {
@@ -86,7 +88,7 @@ Hello i'm Phil Boivin!
         });
     </script>
 
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut leo vel ex accumsan rhoncus. Proin euismod viverra eros a posuere. Nam non purus tellus. Integer ac erat condimentum, pulvinar quam sit amet, scelerisque tellus. Nulla nec est diam. Cras vitae est semper justo iaculis molestie. Proin et lacus sit amet neque posuere scelerisque. Nullam commodo urna ut orci volutpat tincidunt. Mauris eget libero ut risus scelerisque volutpat. Aliquam in rutrum lacus.</p>
+    <p class="top-spacer"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut leo vel ex accumsan rhoncus. Proin euismod viverra eros a posuere. Nam non purus tellus. Integer ac erat condimentum, pulvinar quam sit amet, scelerisque tellus. Nulla nec est diam. Cras vitae est semper justo iaculis molestie. Proin et lacus sit amet neque posuere scelerisque. Nullam commodo urna ut orci volutpat tincidunt. Mauris eget libero ut risus scelerisque volutpat. Aliquam in rutrum lacus.</p>
 
    </section>
 
