--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,22 @@ Hello i'm Phil Boivin!
     <div class="content-block">  
     <h1>Portfolio</h1>
 
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut leo vel ex accumsan rhoncus. Proin euismod viverra eros a posuere. Nam non purus tellus. Integer ac erat condimentum, pulvinar quam sit amet, scelerisque tellus. Nulla nec est diam. Cras vitae est semper justo iaculis molestie. Proin et lacus sit amet neque posuere scelerisque. Nullam commodo urna ut orci volutpat tincidunt. Mauris eget libero ut risus scelerisque volutpat. Aliquam in rutrum lacus.</p>
+    <p>Voici quelques-unes de mes photos préférées accompagnées de quelques projets personnels et professionnels.</p>
+
+     
+      <ul class="sub-menu">
+        <li><a href="editorial.html">Editorial</a></li>
+        <li><a href="corpo.html">Corporatif</a></li>
+        <li><a href="voyage.html">Voyage</a></li>
+        <li><a href="taxi.html">Taxi</a></li>
+        <li><a href="cirque-du-soleil.html">Cirque du Soleil</a></li>
+        <li><a href="covid19.html">Covid-19</a></li>
+      </ul>
+    
     </div>
 
-    <div id="gallery01">Photo Gallery</div>
+
+    <div id="gallery01"></div>
   
     <script>
        jQuery(document).ready(function () {
