--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,14 @@ Hello i'm Phil Boivin!
     <section id="content">
 
 
-    <div class="content-block">  
-    <h1>Portfolio</h1>
+    <div class="content-block">
+
+    <div id="gallery01"></div>
+
+    <h1 class="top-spacer">Portfolio</h1>
 
     <p>Voici quelques-unes de mes photos préférées accompagnées de quelques projets personnels et professionnels.</p>
-
-     
+ 
       <ul class="sub-menu">
         <li><a href="editorial.html">Editorial</a></li>
         <li><a href="corpo.html">Corporatif</a></li>
@@ -57,7 +59,7 @@ Hello i'm Phil Boivin!
     </div>
 
 
-    <div id="gallery01"></div>
+    
   
     <script>
        jQuery(document).ready(function () {
