Major update to portfolio
Added new publications images

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ Hello i'm Phil Boivin!
 <head>
 
   <meta charset="utf-8">
-  <title>Contactez-moi | Phil Boivin</title>
+  <title>Contactez-moi | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
 
