--- a/footer.html
+++ b/footer.html
@@ -4,13 +4,14 @@
 
    <div class="logo"><a href="index.html">Philippe Boivin</a></div>
 
+<!-- 
    	<nav>
 		  <ul>
 		    <li><a href="portfolio.html">Portfolio</a></li>
 		    <li><a href="apropos.html">À propos</a></li>
 		    <li><a href="contact.html">Contact</a></li>
 		  </ul>
-		</nav>
+		</nav> -->
 
 
     <div class="social-icons">
