--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,16 @@ Hello i'm Phil Boivin!
   <main>
     <section id="content">
 
+      <nav id="main-menu" role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu-items"></ul>
+        </div>
+      </nav>
+
       <div class="row">
         <div class="col">
 
@@ -157,7 +167,8 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("footer").load("footer.html"); 
+    $("#menu-items").load("menu.html"); 
+    $("footer").load("footer.html");
   });
 </script> 
 
