--- a/footer.html
+++ b/footer.html
@@ -2,10 +2,10 @@
 <section id="menu">
    
 
-   <div class="logo"><a href="index.html">Philippe Boivin</a></div>
+  <!--  <div class="logo"><a href="index.html">Philippe Boivin</a></div> -->
 
 
-   	<nav id="footer-menu">
+   	<nav>
 
    		<ul id="footer-menu-items"></ul>
 
@@ -14,7 +14,7 @@
 			    $("#footer-menu-items").load("menu.html"); 		    
 			  });
 			</script> 
-
+			
 		</nav>
 
 
