--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@ Hello i'm Phil Boivin!
           <span></span>
           <ul id="menu-items"></ul>
         </div>
+        <div class="logo"><a href="index.html">Philippe Boivin</a></div>
       </nav>
 
       <div class="row">
