--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Hello i'm Phil Boivin!
         <span></span> 
         <ul id="menu-items"></ul>
       </div>
-      <div id="logo2">Philippe Boivin</div>
+      <div class="logo"><a href="index.html">Philippe Boivin</a></div>
     </nav>
 
     <div class="row">
