Testing logo footer

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <section id="menu">
    
 
-  <!--  <div class="logo"><a href="index.html">Philippe Boivin</a></div> -->
+   <div class="logo"><a href="index.html">Philippe Boivin</a></div>
 
 
    	<nav>
