--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,13 @@ Hello i'm Phil Boivin!
           <span></span>
           <ul id="menu-items"></ul>
         </div>
-       <!--  <div class="logo"><a href="index.html">Philippe Boivin</a></div> -->
       </nav>
 
       <div class="row">
         <div class="col">
 
           <h1>Portfolio</h1>
-          <p>Quelques-unes de mes photos préférées.</p>
+         <!--  <p>Quelques-unes de mes photos préférées.</p> -->
      
         </div>
       </div>
