New profile photo

--- a/apropos.html
+++ b/apropos.html
@@ -31,8 +31,10 @@ Hello i'm Phil Boivin!
     <div class="row">
       <div class="col">
         
+        <img class="portait" src="img/PhilippeBoivin.png" alt="Philippe Boivin">
+
         <h1>À propos</h1>
-        
+
         <p>
           Philippe Boivin est un photographe et vidéaste pratiquant à Montréal. Il explore l’imagerie numérique depuis le début des années 2000. À travers ses objectifs, il préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. Rigoureux et très curieux, il est constamment à la recherche de nouveaux projets.
         </p>
@@ -42,7 +44,9 @@ Hello i'm Phil Boivin!
         </p>
 
       </div>
+
     </div>
+
 
 
   </section> 
