--- a/inc/footer.html
+++ b/inc/footer.html
@@ -11,7 +11,7 @@
 
 		  <script> 
 			  $(function(){
-			    $("#footer-menu-items").load("menu.html"); 		    
+			    $("#footer-menu-items").load("inc/menu.html"); 		    
 			  });
 			</script> 
 			
