--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hello i'm Phil Boivin!
   <title>Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -48,8 +48,8 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("menu.html"); 
-    $("footer").load("footer.html");
+    $("#menu-items").load("inc/menu.html"); 
+    $("footer").load("inc/footer.html");
   });
 </script> 
 
