--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@ Hello i'm Phil Boivin!
   <title>Portfolio | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.2/jquery.nanogallery2.min.js"></script>
   <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -50,11 +50,10 @@ Hello i'm Phil Boivin!
           <h2>Autres photos et projets</h2>
           <ul class="sub-menu">
             <li><a href="editorial.html">Editorial</a></li>
-            <li><a href="corpo.html">Corporatif</a> + Laurier</li>
+            <li><a href="corpo.html">Corporatif</a></li>
             <li><a href="voyage.html">Voyage</a></li>
             <li><a href="taxi.html">Taxi</a></li>
             <li><a href="cirque-du-soleil.html">Cirque du Soleil</a>  - Spotlight etc.</li>
-            <li><a href="covid19.html">Covid-19</a></li>
             <li><a href="mobile.html">Mobile</a></li>
             <li><a href="video.html">Video</a></li>
           </ul>
@@ -183,8 +182,8 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("menu.html"); 
-    $("footer").load("footer.html");
+    $("#menu-items").load("inc/menu.html"); 
+    $("footer").load("inc/footer.html");
   });
 </script> 
 
