--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@ Hello i'm Phil Boivin!
 
 <head>
   <meta charset="utf-8">
-  <title>À propos | Philippe Boivin</title>
+  <title>Vidéo | Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -30,24 +30,16 @@ Hello i'm Phil Boivin!
 
     <div class="row">
       <div class="col">
-        
-        <img class="portrait" src="img/PhilippeBoivin.png" alt="Philippe Boivin">
 
-        <h1>À propos</h1>
+        <h1>Vidéo</h1>
 
         <p>
-          Philippe Boivin est un photographe et vidéaste pratiquant à Montréal. Il explore l’imagerie numérique depuis le début des années 2000. À travers ses objectifs, il préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. Rigoureux et très curieux, il est constamment à la recherche de nouveaux projets.
-        </p>
-
-        <p>
-          Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal.
+         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/389216283" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </p>
 
       </div>
 
     </div>
-
-
 
   </section> 
 </main>
@@ -56,7 +48,7 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html"); 
+    $("#menu-items").load("inc/menu.html");
     $("footer").load("inc/footer.html");
   });
 </script> 
