New page : Mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,11 @@ Hello i'm Phil Boivin!
 
           <h2>Autres photos et projets</h2>
           <ul class="sub-menu">
-            <li><a href="editorial.html">Editorial</a></li>
-            <li><a href="corpo.html">Corporatif</a></li>
-            <li><a href="voyage.html">Voyage</a></li>
-            <li><a href="taxi.html">Taxi</a></li>
-            <li><a href="cirque-du-soleil.html">Cirque du Soleil</a>  - Spotlight etc.</li>
+            <li>Editorial</li>
+            <li>Corporatif</li>
+            <li>Voyage</li>
+            <li><a href="taxi.html">Les visages du taxi</a></li>
+            <li><a href="cirque-du-soleil.html">Cirque du Soleil</a></li>
             <li><a href="mobile.html">Mobile</a></li>
             <li><a href="video.html">Video</a></li>
           </ul>
