Adjustement to Editorial.html

--- a/editorial.html
+++ b/editorial.html
@@ -72,16 +72,13 @@ Hello i'm Phil Boivin!
                 // ### gallery content ### 
                 items: [
                 { src: '900px/20091111-editorial-philboivin-001.jpg', srct: '400px/20091111-editorial-philboivin-001.jpg', 
-                  title: 'Metric' },
+                  title: 'Metric - 2009' },
 
                 { src: '900px/20131023-editorial-philboivin-002.jpg', srct: '400px/20131023-editorial-philboivin-002.jpg', 
-                  title: 'BMX - Quebec' },
-
-                { src: '900px/20141116-editorial-philboivin-003.jpg', srct: '400px/20141116-editorial-philboivin-003.jpg', 
-                  title: 'Place des Arts - Montreal' },
+                  title: 'Boston - 2013' },
 
                 { src: '900px/20141129-editorial-philboivin-004.jpg', srct: '400px/20141129-editorial-philboivin-004.jpg', 
-                  title: 'Biker - Inde' },
+                  title: 'Police au Super S.' },
 
                 { src: '900px/20150123-editorial-philboivin-005.jpg', srct: '400px/20150123-editorial-philboivin-005.jpg', 
                   title: 'Sam Underwater' },
