Update editorial page

--- a/editorial.html
+++ b/editorial.html
@@ -81,10 +81,10 @@ Hello i'm Phil Boivin!
                   title: 'Police au Super S.' },
 
                 { src: '900px/20150123-editorial-philboivin-005.jpg', srct: '400px/20150123-editorial-philboivin-005.jpg', 
-                  title: 'Sam Underwater' },
+                  title: 'Patrice Bernier' },
 
                 { src: '900px/20150204-editorial-philboivin-006.jpg', srct: '400px/20150204-editorial-philboivin-006.jpg', 
-                  title: 'Spectacles à venir' },
+                  title: 'Sieste - Florida - 2015' },
 
                 { src: '900px/20150404-editorial-philboivin-007.jpg', srct: '400px/20150404-editorial-philboivin-007.jpg', 
                   title: 'New York City' },
