--- a/taxi.html
+++ b/taxi.html
@@ -141,6 +141,11 @@ Hello i'm Phil Boivin!
     </div>
 
 
+    <div class="row top-spacer">
+      <div class="col">
+        <span id="menu-portfolio"></span>
+      </div>
+    </div>
   
 
    </section>
@@ -151,6 +156,7 @@ Hello i'm Phil Boivin!
 <script> 
   $(function(){
     $("#menu-items").load("inc/menu.html"); 
+    $("#menu-portfolio").load("inc/menu-portfolio.html");
     $("footer").load("inc/footer.html");
   });
 </script> 
