--- a/video.html
+++ b/video.html
@@ -38,7 +38,12 @@ Hello i'm Phil Boivin!
         </p>
 
       </div>
+    </div>
 
+    <div class="row top-spacer">
+      <div class="col">
+        <span id="menu-portfolio"></span>
+      </div>
     </div>
 
   </section> 
@@ -49,6 +54,7 @@ Hello i'm Phil Boivin!
 <script> 
   $(function(){
     $("#menu-items").load("inc/menu.html");
+    $("#menu-portfolio").load("inc/menu-portfolio.html");
     $("footer").load("inc/footer.html");
   });
 </script> 
