--- a/cirque-du-soleil.html
+++ b/cirque-du-soleil.html
@@ -91,14 +91,23 @@ Hello i'm Phil Boivin!
     </div>
 
 
+    <div class="row top-spacer">
+      <div class="col">
+        <span id="menu-portfolio"></span>
+      </div>
+    </div>
+
    </section>
  </main>
+
+
 
 <footer></footer>
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html"); 
+    $("#menu-items").load("inc/menu.html");
+    $("#menu-portfolio").load("inc/menu-portfolio.html");
     $("footer").load("inc/footer.html");
   });
 </script> 
