--- a/inc/menu-portfolio.html
+++ b/inc/menu-portfolio.html
@@ -1,9 +1,9 @@
 <h2>Autres photos et projets</h2>
 <ul class="sub-menu">
 	<li><a href="editorial.html">Editorial</a></li>
-	<li>Reportages</li>
+	<li><a href="reportages.html">Reportages</a></li>
 	<li><a href="evenements.html">Événements</a></li>
-	<li>Portrait</li>
+	<li><a href="portraits.html">Portrait</a></li>
 	<li><a href="immobilier.html">Immobilier</a></li>
 	<li><a href="taxi.html">Taxi</a></li>
 	<li><a href="cirque-du-soleil.html">Cirque&nbsp;du&nbsp;Soleil</a></li>
