New page : Reportages

--- a/portraits.html
+++ b/portraits.html
@@ -76,58 +76,58 @@ Hello i'm Phil Boivin!
                 // ### gallery content ### 
                 items: [
                 { src: '900px/20150206-portraits-philboivin-002.jpg', srct: '400px/20150206-portraits-philboivin-002.jpg', 
-                  title: '' },
+                  title: 'Carina' },
 
                 { src: '900px/20130505-portraits-philboivin-001.jpg', srct: '400px/20130505-portraits-philboivin-001.jpg', 
-                  title: '' },
+                  title: 'Carina' },
 
                 { src: '900px/20150208-portraits-philboivin-003.jpg', srct: '400px/20150208-portraits-philboivin-003.jpg', 
-                  title: '' },
+                  title: 'Carina' },
 
                 { src: '900px/20151011-portraits-philboivin-004.jpg', srct: '400px/20151011-portraits-philboivin-004.jpg', 
-                  title: '' },
+                  title: 'Francine' },
 
                 { src: '900px/20151115-portraits-philboivin-005.jpg', srct: '400px/20151115-portraits-philboivin-005.jpg', 
-                  title: '' },
+                  title: 'Carina' },
 
                 { src: '900px/20151129-portraits-philboivin-006.jpg', srct: '400px/20151129-portraits-philboivin-006.jpg', 
-                  title: '' },
+                  title: 'Romain' },
 
                 { src: '900px/20151129-portraits-philboivin-007.jpg', srct: '400px/20151129-portraits-philboivin-007.jpg', 
-                  title: '' },
+                  title: 'Romain et Stéphane' },
 
                 { src: '900px/20151217-portraits-philboivin-008.jpg', srct: '400px/20151217-portraits-philboivin-008.jpg', 
-                  title: '' },
+                  title: 'Silvio' },
 
                 { src: '900px/20161112-portraits-philboivin-009.jpg', srct: '400px/20161112-portraits-philboivin-009.jpg', 
-                  title: '' },
+                  title: 'Zoey' },
 
                 { src: '900px/20170318-portraits-philboivin-010.jpg', srct: '400px/20170318-portraits-philboivin-010.jpg', 
-                  title: '' },
+                  title: 'Len' },
 
                 { src: '900px/20170507-portraits-philboivin-011.jpg', srct: '400px/20170507-portraits-philboivin-011.jpg', 
-                  title: '' },
+                  title: 'Vincent' },
 
                 { src: '900px/20170514-portraits-philboivin-012.jpg', srct: '400px/20170514-portraits-philboivin-012.jpg', 
-                  title: '' },
+                  title: 'Marie-Maude' },
 
                 { src: '900px/20171001-portraits-philboivin-013.jpg', srct: '400px/20171001-portraits-philboivin-013.jpg', 
-                  title: '' },
+                  title: 'Sam et Carina' },
 
                 { src: '900px/20171028-portraits-philboivin-014.jpg', srct: '400px/20171028-portraits-philboivin-014.jpg', 
-                  title: '' },
+                  title: 'Zoey' },
 
                 { src: '900px/20190120-portraits-philboivin-015.jpg', srct: '400px/20190120-portraits-philboivin-015.jpg', 
-                  title: '' },
+                  title: 'Zoey' },
 
                 { src: '900px/20190126-portraits-philboivin-016.jpg', srct: '400px/20190126-portraits-philboivin-016.jpg', 
-                  title: '' },
+                  title: 'Jocelyn' },
 
                 { src: '900px/20190126-portraits-philboivin-017.jpg', srct: '400px/20190126-portraits-philboivin-017.jpg', 
-                  title: '' },
+                  title: 'Théâtre de la Fournaise' },
 
                 { src: '900px/20191112-portraits-philboivin-018.jpg', srct: '400px/20191112-portraits-philboivin-018.jpg', 
-                  title: '' },
+                  title: 'Véronique' },
 
                   ]
               });
