--- a/evenements.html
+++ b/evenements.html
@@ -79,63 +79,62 @@ Hello i'm Phil Boivin!
                 items: [
 
                 { src: '900px/20140809-events-philboivin-001.jpg', srct: '400px/20140809-events-philboivin-001.jpg', 
-                  title: '' },
+                  title: 'Vanna et Stéphane' },
 
                 { src: '900px/20140809-events-philboivin-002.jpg', srct: '400px/20140809-events-philboivin-002.jpg', 
-                  title: '' },
+                  title: 'Vanna et Stéphane' },
 
                 { src: '900px/20150321-events-philboivin-003.jpg', srct: '400px/20150321-events-philboivin-003.jpg', 
-                  title: '' },
+                  title: 'Bianca et Jérôme' },
 
                 { src: '900px/20181201-events-philboivin-004.jpg', srct: '400px/20181201-events-philboivin-004.jpg', 
-                  title: '' },
+                  title: 'Demoiselle d\'honneur'},
 
                 { src: '900px/20181201-events-philboivin-005.jpg', srct: '400px/20181201-events-philboivin-005.jpg', 
-                  title: '' },
+                  title: 'Jessica et David' },
 
                 { src: '900px/20181201-events-philboivin-006.jpg', srct: '400px/20181201-events-philboivin-006.jpg', 
-                  title: '' },
+                  title: 'Célébration' },
 
                 { src: '900px/20190204-events-philboivin-007.jpg', srct: '400px/20190204-events-philboivin-007.jpg', 
-                  title: '' },
+                  title: '5 à 7' },
 
                 { src: '900px/20190518-events-philboivin-008.jpg', srct: '400px/20190518-events-philboivin-008.jpg', 
-                  title: '' },
+                  title: 'Hélène et Stéphane' },
 
                 { src: '900px/20190518-events-philboivin-009.jpg', srct: '400px/20190518-events-philboivin-009.jpg', 
-                  title: '' },
+                  title: 'Hélène et Stéphane' },
 
                 { src: '900px/20190619-events-philboivin-010.jpg', srct: '400px/20190619-events-philboivin-010.jpg', 
-                  title: '' },
+                  title: 'Dr. Roberta Bondar' },
 
                 { src: '900px/20190620-events-philboivin-011.jpg', srct: '400px/20190620-events-philboivin-011.jpg', 
-                  title: '' },
+                  title: 'Événement corporatif' },
 
                 { src: '900px/20190621-events-philboivin-012.jpg', srct: '400px/20190621-events-philboivin-012.jpg', 
-                  title: '' },
+                  title: 'Avant bal' },
 
                 { src: '900px/20190628-events-philboivin-013.jpg', srct: '400px/20190628-events-philboivin-013.jpg', 
-                  title: '' },
+                  title: 'Party' },
 
                 { src: '900px/20190713-events-philboivin-014.jpg', srct: '400px/20190713-events-philboivin-014.jpg', 
-                  title: '' },
+                  title: 'Mariage' },
 
                 { src: '900px/20190713-events-philboivin-015.jpg', srct: '400px/20190713-events-philboivin-015.jpg', 
-                  title: '' },
+                  title: 'Les trois amigos' },
 
                 { src: '900px/20190921-events-philboivin-016.jpg', srct: '400px/20190921-events-philboivin-016.jpg', 
-                  title: '' },
+                  title: 'Activité corporative' },
 
                 { src: '900px/20190921-events-philboivin-017.jpg', srct: '400px/20190921-events-philboivin-017.jpg', 
-                  title: '' },
+                  title: 'Photo booth FGP' },
 
                 { src: '900px/20191030-events-philboivin-018.jpg', srct: '400px/20191030-events-philboivin-018.jpg', 
-                  title: '' },
+                  title: 'Champagne' },
 
                 { src: '900px/20191107-events-philboivin-019.jpg', srct: '400px/20191107-events-philboivin-019.jpg', 
-                  title: '' },
+                  title: 'Honneur' },
                 
-
                   ]
               });
           });
