--- a/inc/menu-portfolio.html
+++ b/inc/menu-portfolio.html
@@ -5,8 +5,10 @@
 	<li><a href="evenements.html">Événements</a></li>
 	<li><a href="portraits.html">Portrait</a></li>
 	<li><a href="immobilier.html">Immobilier</a></li>
+	<li><a href="publicites.html">Publicités</a></li>
 	<li><a href="taxi.html">Taxi</a></li>
 	<li><a href="cirque-du-soleil.html">Cirque&nbsp;du&nbsp;Soleil</a></li>
 	<li><a href="mobile.html">Mobile</a></li>
+	<li><a href="flashback.html">Flashback</a></li>
 	<li><a href="video.html">Video</a></li>
 </ul>
