Minor adjustments to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,10 +88,10 @@ Hello i'm Phil Boivin!
               
               // ### gallery content ### 
                items: [
-              {src: 'editorial/900px/20190405-editorial-philboivin-017.jpg', srct: 'editorial/400px/20190405-editorial-philboivin-017.jpg', 
+              { src: 'editorial/900px/20190405-editorial-philboivin-017.jpg', srct: 'editorial/400px/20190405-editorial-philboivin-017.jpg', 
                 title: 'Je suis taxi - 2019' },
 
-              {src: 'editorial/900px/20200319-editorial-philboivin-021.jpg', srct: 'editorial/400px/20200319-editorial-philboivin-021.jpg', 
+              { src: 'editorial/900px/20200319-editorial-philboivin-021.jpg', srct: 'editorial/400px/20200319-editorial-philboivin-021.jpg', 
                 title: 'Couple dans le Vieux-Montréal durant la Covid-19 - 2020' },
 
               { src: 'editorial/900px/20200215-editorial-philboivin-020.jpg', srct: 'editorial/400px/20200215-editorial-philboivin-020.jpg', 
@@ -100,20 +100,17 @@ Hello i'm Phil Boivin!
               { src: 'editorial/900px/20170618-editorial-philboivin-010.jpg', srct: 'editorial/400px/20170618-editorial-philboivin-010.jpg', 
                   title: 'Zoey - 2017'},
 
-               { src: 'ads/900px/20181017-ads-philboivin-006.jpg', srct: 'ads/400px/20181017-ads-philboivin-006.jpg', 
+              { src: 'ads/900px/20181017-ads-philboivin-006.jpg', srct: 'ads/400px/20181017-ads-philboivin-006.jpg', 
                   title: 'Cegep Gerald-Godin' },
 
-              { src: 'portraits/900px/20161112-portraits-philboivin-009.jpg', srct: 'portraits/400px/20161112-portraits-philboivin-009.jpg', 
-                  title: 'Zoey' },
+              { src: 'editorial/900px/20141129-editorial-philboivin-004.jpg', srct: 'editorial/400px/20141129-editorial-philboivin-004.jpg', 
+                  title: 'Police au Super S. - 2014' },
 
-              { src: 'portraits/900px/20171028-portraits-philboivin-014.jpg', srct: 'portraits/400px/20171028-portraits-philboivin-014.jpg', 
-                  title: 'Zoey' },
+              { src: 'flashback/flashback-old-montreal-vanna-stephane.jpg', srct: 'flashback/flashback-old-montreal-vanna-stephane.jpg', 
+                  title: 'Vanna et Steph' },
 
               { src: 'portraits/900px/20190120-portraits-philboivin-015.jpg', srct: 'portraits/400px/20190120-portraits-philboivin-015.jpg', 
                   title: 'Zoey' },
-
-              { src: 'portraits/900px/20151129-portraits-philboivin-007.jpg', srct: 'portraits/400px/20151129-portraits-philboivin-007.jpg', 
-                  title: 'Romain et Stéphane' },
 
               { src: 'travel/900px/20150721-travel-philboivin-019.jpg', srct: 'travel/400px/20150721-travel-philboivin-019.jpg', 
                   title: 'Bordeaux - 2015' },
@@ -131,8 +128,22 @@ Hello i'm Phil Boivin!
                   title: 'Kyoto - 2015' },
 
               { src: 'realestate/900px/20190830-realestate-philboivin-003.jpg', srct:'realestate/400px/20190830-realestate-philboivin-003.jpg', title: 'Petite Italie - Montréal' },
-               
-                  ]
+
+
+              { src: 'portraits/900px/20171028-portraits-philboivin-014.jpg', srct: 'portraits/400px/20171028-portraits-philboivin-014.jpg', 
+                  title: 'Zoey' },
+
+
+              { src: 'travel/900px/20150705-travel-philboivin-012.jpg', srct: 'travel/400px/20150705-travel-philboivin-012.jpg', 
+                  title: 'Nara - 2015' },
+
+              { src: 'portraits/900px/20161112-portraits-philboivin-009.jpg', srct: 'portraits/400px/20161112-portraits-philboivin-009.jpg', 
+                  title: 'Zoey' },
+
+              { src: 'travel/900px/20150701-travel-philboivin-011.jpg', srct: 'travel/400px/20150701-travel-philboivin-011.jpg', 
+                  title: 'Kyoto - 2015' },
+
+                ]
             });
 
           jQuery("#gallery-publications").nanogallery2( {
