Test - Deploy master

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
         
         <p>
         Je suis Philippe, un photographe montréalais au service des humains et de certains robots.<br>
-        Je vous invite à visiter mon <a href="portfolio.html">portfolio</a> ou ma page <a href="apropos.html">à propos</a>. Vous pouvez même me <a href="contact.html">contacter</a>.
+        Je vous invite à visiter mon <a href="portfolio.html">portfolio</a> ou ma page <a href="apropos.html">à propos</a>. Vous pouvez même me <a href="contact.html">contacter</a>!
         </p>
 
       </div>
