HMTL updates for W3
- remove role="navigation"
- replace section content with div

--- a/flashback.html
+++ b/flashback.html
@@ -19,9 +19,9 @@ Hello i'm Phil Boivin!
 <body>
 
   <main>
-    <section id="content">
+    <div id="content">
 
-      <nav id="main-menu" role="navigation">
+      <nav id="main-menu">
         <div id="menuToggle">
           <input type="checkbox" />
           <span></span>
@@ -109,7 +109,7 @@ Hello i'm Phil Boivin!
 
       </script>
 
-   </section>
+   </div>
  </main>
 
 <footer></footer>
