--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@ Hello i'm Phil Boivin!
 <body>
 
   <main>
-    <section id="content">
+    <div id="content">
 
-      <nav id="main-menu" role="navigation">
+      <nav id="main-menu">
         <div id="menuToggle">
           <input type="checkbox" />
           <span></span>
@@ -34,7 +34,7 @@ Hello i'm Phil Boivin!
       <div class="row">
         <div class="col">
 
-          <h1>Portfolio</h1>
+          <h1>Portfolio</h1>     
      
         </div>
       </div>
@@ -197,7 +197,7 @@ Hello i'm Phil Boivin!
     </script>
 
 
-   </section>
+   </div>
  </main>
 
 <footer></footer>
