--- a/apropos.html
+++ b/apropos.html
@@ -16,9 +16,9 @@ Hello i'm Phil Boivin!
 <body>
 
   <main>
-    <section id="content">
+    <div id="content">
 
-      <nav id="main-menu" role="navigation">
+      <nav id="main-menu">
         <div id="menuToggle">
           <input type="checkbox" />
           <span></span>
@@ -48,7 +48,7 @@ Hello i'm Phil Boivin!
     </div>
 
 
-  </section> 
+  </div> 
 </main>
   
 <footer></footer>
