--- a/inc/404.html
+++ b/inc/404.html
@@ -6,7 +6,7 @@ Hello i'm Phil Boivin!
 
 <head>
   <meta charset="utf-8">
-  <title>Philippe Boivin</title>
+  <title>404 - Philippe Boivin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -31,11 +31,10 @@ Hello i'm Phil Boivin!
     <div class="row">
       <div class="col">
 
-        <h1>Bienvenue</h1>
+        <h1>Oups!</h1>
         
         <p>
-        Je suis Philippe, un photographe montréalais au service des humains et de certains robots.<br>
-        Je vous invite à visiter mon <a href="portfolio.html">portfolio</a> ou ma page <a href="apropos.html">à propos</a>. Vous pouvez même me <a href="contact.html">contacter</a>.
+        Page introuvable - <a href="https://philboivin.com">Cliquez ici pour recommencer!</a>
         </p>
 
       </div>
