--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@ Hello i'm Phil Boivin!
         <h1>Oups!</h1>
         
         <p>
-        Page introuvable - <a href="https://philboivin.com">Cliquez ici pour recommencer!</a>
+        404 - Page introuvable
         </p>
 
       </div>
