--- a/inc/footer.html
+++ b/inc/footer.html
@@ -2,7 +2,7 @@
 <section id="menu">
    
 
-   <div class="logo"><a href="index.html">Philippe Boivin</a></div>
+   <div class="logo"><a href="/index.html">Philippe Boivin</a></div>
 
 
    	<nav>
@@ -11,7 +11,7 @@
 
 		  <script> 
 			  $(function(){
-			    $("#footer-menu-items").load("inc/menu.html"); 		    
+			    $("#footer-menu-items").load("/inc/menu.html"); 		    
 			  });
 			</script> 
 			
