--- a/taxi.html
+++ b/taxi.html
@@ -10,7 +10,7 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@ Hello i'm Phil Boivin!
       
     <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190407-Dany-Melanie-PhilBoivin.jpg" alt="Dany et Mélanie">
+        <img src="/img/photos/visages-du-taxi/20190407-Dany-Melanie-PhilBoivin.jpg" alt="Dany et Mélanie">
       </div>
       <div class="col padding-left">
           <h2>Dany et Mélanie</h2>
@@ -59,7 +59,7 @@ Hello i'm Phil Boivin!
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190407-Pascale-Benoit-PhilBoivin.jpg" alt="Pascale et Benoit">
+        <img src="/img/photos/visages-du-taxi/20190407-Pascale-Benoit-PhilBoivin.jpg" alt="Pascale et Benoit">
       </div>
       <div class="col padding-left">
           <h2>Pascale et Benoit</h2>
@@ -75,7 +75,7 @@ Hello i'm Phil Boivin!
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190414-Stanley-PhilBoivin.jpg" alt="Stanley">
+        <img src="/img/photos/visages-du-taxi/20190414-Stanley-PhilBoivin.jpg" alt="Stanley">
       </div>
       <div class="col padding-left">
           <h2>Stanley</h2>
@@ -88,7 +88,7 @@ Hello i'm Phil Boivin!
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190423-Zaidane-PhilBoivin.jpg" alt="Zaidane">
+        <img src="/img/photos/visages-du-taxi/20190423-Zaidane-PhilBoivin.jpg" alt="Zaidane">
       </div>
       <div class="col padding-left">
           <h2>Zaidane</h2>
@@ -105,7 +105,7 @@ Hello i'm Phil Boivin!
 
     <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190506-LucVP-PhilBoivin.jpg" alt="Luc">
+        <img src="/img/photos/visages-du-taxi/20190506-LucVP-PhilBoivin.jpg" alt="Luc">
       </div>
       <div class="col padding-left">
       <h2>Luc</h2>
@@ -127,7 +127,7 @@ Hello i'm Phil Boivin!
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/visages-du-taxi/20190509-Francis-PhilBoivin.jpg" alt="Francis">
+        <img src="/img/photos/visages-du-taxi/20190509-Francis-PhilBoivin.jpg" alt="Francis">
       </div>
       <div class="col padding-left">
           <h2>Francis</h2>
@@ -155,9 +155,9 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html"); 
-    $("#menu-portfolio").load("inc/menu-portfolio.html");
-    $("footer").load("inc/footer.html");
+    $("#menu-items").load("/inc/menu.html"); 
+    $("#menu-portfolio").load("/inc/menu-portfolio.html");
+    $("footer").load("/inc/footer.html");
   });
 </script> 
 
