--- a/apropos.html
+++ b/apropos.html
@@ -10,7 +10,7 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -55,8 +55,8 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html"); 
-    $("footer").load("inc/footer.html");
+    $("#menu-items").load("/inc/menu.html"); 
+    $("footer").load("/inc/footer.html");
   });
 </script> 
 
