--- a/cirque-du-soleil.html
+++ b/cirque-du-soleil.html
@@ -10,7 +10,7 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -40,49 +40,49 @@ Hello i'm Phil Boivin!
 
     <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-002.jpg" alt="Jean-Francois">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-002.jpg" alt="Jean-Francois">
       </div>
     </div>
 
     <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-003.jpg" alt="Alexandra">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-003.jpg" alt="Alexandra">
       </div>
     </div>
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-004.jpg" alt="Mitch">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-004.jpg" alt="Mitch">
       </div>
     </div>
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-005.jpg" alt="Sandy">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-005.jpg" alt="Sandy">
       </div>
     </div>
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-006.jpg" alt="Adam">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-006.jpg" alt="Adam">
       </div>
     </div>
 
     <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-001.jpg" alt="Sylvia">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-001.jpg" alt="Sylvia">
       </div>
     </div>
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-007.jpg" alt="Pierre-Luc">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-007.jpg" alt="Pierre-Luc">
       </div>
     </div>
 
      <div class="row">
       <div class="col">
-        <img src="img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-008.jpg" alt="Daniel">
+        <img src="/img/photos/lumiere-cirque-du-soleil/20181218-Lumiere-Cirque-du-Soleil-008.jpg" alt="Daniel">
       </div>
     </div>
 
@@ -100,9 +100,9 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html");
-    $("#menu-portfolio").load("inc/menu-portfolio.html");
-    $("footer").load("inc/footer.html");
+    $("#menu-items").load("/inc/menu.html");
+    $("#menu-portfolio").load("/inc/menu-portfolio.html");
+    $("footer").load("/inc/footer.html");
   });
 </script> 
 
