--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Hello i'm Phil Boivin!
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="img/icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
         
         <p>
         Je suis Philippe, un photographe montréalais au service des humains et de certains robots.<br>
-        Je vous invite à visiter mon <a href="portfolio.html">portfolio</a> ou ma page <a href="apropos.html">à propos</a>. Vous pouvez même me <a href="contact.html">contacter</a>.
+        Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> ou ma page <a href="/apropos.html">à propos</a>. Vous pouvez même me <a href="/contact.html">contacter</a>.
         </p>
 
       </div>
@@ -48,8 +48,8 @@ Hello i'm Phil Boivin!
 
 <script> 
   $(function(){
-    $("#menu-items").load("inc/menu.html"); 
-    $("footer").load("inc/footer.html");
+    $("#menu-items").load("/inc/menu.html"); 
+    $("footer").load("/inc/footer.html");
   });
 </script> 
 
